Adding images and CSS styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 	<div id="page">
 		<main>
-			<img src="" alt="">
+			<img 
+			src="./assets/main-image.jpg"
+			alt="Alguns cupcakes de café com chantilly, em um prato, sobre a mesa.">
 			<section id="about">
 				<h1>Cupcake de café com chantilly</h1>
 				<p>
@@ -72,7 +74,7 @@
 				</p>
 			</section>
 		</main>
-
+		
 		<footer>
 			<p>Feito com &#129293; por Vitor Lucio</p>
 		</footer>
