--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Receitas</title>
 	<link rel="stylesheet" href="./style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="page">
@@ -74,10 +77,11 @@
 				</p>
 			</section>
 		</main>
-		
-		<footer>
-			<p>Feito com &#129293; por Vitor Lucio</p>
-		</footer>
+
 	</div>
+
+	<footer>
+		<p>Feito com &#129293; por Vitor Lucio</p>
+	</footer>
 </body>
 </html>
