Adding the footer

--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
 				</p>
 			</section>
 		</main>
-
 	</div>
 
 	<footer>
-		<p>Feito com &#129293; por Vitor Lucio</p>
+		<p>
+			Feito com
+			<img src="./assets/heart.svg" alt="Um ícone de coração fofo">
+			por Vitor Lucio
+		</p>
 	</footer>
 </body>
 </html>
